# fair-asr-code

./: .gitignore  README.md  cv_17_default.json  pyproject.toml  requirements.txt
bash/: arrayjob_run.sh  evaluate_cv_17.sh  evaluate_dataset.sh  transcribe_arrayjob_run.sh  transcribe_arrayjob_run_VP.sh
config/: common_voice.py  cv_17_FBK-MT--fama-medium-asr_default.json  cv_17_FBK-MT--fama-medium_default.json  cv_17_FBK-MT--fama-small-asr_default.json  cv_17_FBK-MT--fama-small_default.json  cv_17_distil-whisper--distil-large-v3_default.json  cv_17_facebook--seamless-m4t-v2-large_default.json  cv_17_nvidia--canary-1b_default.json  cv_17_openai--whisper-large-v3-turbo_default.json  cv_17_openai--whisper-large-v3_default.json  facebook--voxpopuli_FBK-MT--fama-medium-asr_default.json  facebook--voxpopuli_FBK-MT--fama-medium_default.json  facebook--voxpopuli_FBK-MT--fama-small-asr_default.json  facebook--voxpopuli_FBK-MT--fama-small_default.json  facebook--voxpopuli_distil-whisper--distil-large-v3_default.json  facebook--voxpopuli_facebook--seamless-m4t-v2-large_default.json  facebook--voxpopuli_nvidia--canary-1b_default.json  facebook--voxpopuli_openai--whisper-large-v3-turbo_default.json  facebook--voxpopuli_openai--whisper-large-v3_default.json  generate_config.py
fair_asr_code/: config.py  evaluate.py  transcribe_dataset.py  transcriber.py
running/: evaluate.py  transcribe_dataset.py  utils.py
running/normalizers/: __init__.py
scripts/: generate_config.py
src/: evaluate.py  transcriber.py
src/config/: generate_config.py
src/running/: transcribe_dataset.py  (+1 more)
(+1 files in other folders)
